public/assets/css/breeding.css
.section-carousel {
    background-image: url("../images/background-carousel.jpg");
    background-repeat: no-repeat;
    background-size: cover;
}

.carouselImg {
    object-fit: cover;
    width: 520px;
    height: 520pX;
}

a.carousel-control-next, a.carousel-control-prev {
     background-color: var(--main-color);
     height: 100px;
     width: 100px;
     margin: auto 0;
}
 .carousel-board  {
    padding: var(--spacing3);
}

 .mainImg {
     object-fit: cover;
     width: 600px;
     height: 400px;
 }
.headerPresentation {
    background-color: var(--secondary-color);
    padding: var(--spacing3);
}

.container-fluids {
    padding-left: 0;
    padding-right: 0;
}

.textPresentation {
    margin-top: var(--spacing3);
    margin-bottom: var(--spacing2);
}
 .title {
     margin-bottom: calc(var(--spacing3)*2);
 }

  .banner {
     width: auto;
 }

div.text, h2, h3, ul li {
  text-align: center;
}

p {
    font-family: var(--font-text);
}


ol li:active {
    color: var(--main-color);
}

ul li {
    list-style-type: none;
}

h2 {
    font-size: calc(var(--spacing4) * 2);
}

h3 {
    font-size: var(--spacing4);
}

p {
    font-size: var(--spacing3);
}

 .banner {
     width: calc(var(--spacing4) * 10);
     margin-bottom: calc(var(--spacing3));
}

 .banner:hover {
     border: 1px solid var(--light-color);
     box-shadow: var(--light-color);
 }


 @media screen  and (max-width: 680px){
    .carousel-board {
        display: none;
    }
 }

